<resources>
    <string name="app_name">Smogon Android</string>
    <string name="tab1">stats</string>
    <string name="tab2">overview</string>
    <string name="tab3">articles</string>
    <string name="sample">sample text</string>
    <string name="gen1">RBY</string>
    <string name="gen2">GSC</string>
    <string name="gen3">RSE</string>
    <string name="gen4">DPP</string>
    <string name="gen5">BWB2W2</string>
    <string name="gen6">XY</string>
    <string name="gen7">SMUSUM</string>
    <string name="profile">profile pic</string>
    <string name="welcome">Select your Gen</string>
    <string name="Warning">Warning! \nArticles are already up-to-date.</string>
    <string name="Success">Success! \nStrategies for this pokemon were updated!</string>
    <string name="search">Search Pokemon</string>
    <string name="stats">HP\u0020\u0020ATK\u0020DEF\u0020SPA\u0020SPD\u0020SPE</string>
    <string name="type">Type1\u0020\u0020\u0020\u0020Type2\u0020\u0020\u0020\u0020</string>
    <string name="number">\u0023</string>
    <string name="update">update</string>
    <string name="backward"> \u002F </string>
    <string name="colon">\u003A</string>
    <string name="Update">Update All Articles</string>
    <string name="HP">HP</string>
    <string name="Atk">Atk</string>
    <string name="Def">Def</string>
    <string name="Spa">Spa</string>
    <string name="Spd">Spd</string>
    <string name="Spe">Spe</string>
    <string name="Name">Name</string>
    <string name="Type1">Type1</string>
    <string name="Type2">Type2</string>
    <string name="Ability">Ability</string>
    <string name="pokedex_activity">Pokedex \nSearch Pokemon and read analyses articles!</string>
    <string name="title_selection">Select Your Function!</string>
    <string name="ClipBoard">Copy to ClipBoard</string>
    <string name="No_Wifi">Failure! \nThere is no Internet Access.
        \nMake sure:\n
        1. You are not in airplane mode.\n
        2. Your phone\'s/tablet\'s wifi is turned on.\n
        3. Your router/modem is working correctly.\n
        After that try again.
    </string>
</resources>
