<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_border"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/search_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:paddingBottom="@dimen/padding_switch"
                    android:paddingLeft="@dimen/padding_switch"
                    android:paddingRight="@dimen/padding_switch"
                    android:paddingTop="@dimen/padding_switch"
                    android:text="@string/HP"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:paddingBottom="@dimen/padding_switch"
                    android:paddingLeft="@dimen/padding_switch"
                    android:paddingRight="@dimen/padding_switch"
                    android:paddingTop="@dimen/padding_switch"
                    android:text="@string/Atk"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:paddingBottom="@dimen/padding_switch"
                    android:paddingLeft="@dimen/padding_switch"
                    android:paddingRight="@dimen/padding_switch"
                    android:paddingTop="@dimen/padding_switch"
                    android:text="@string/Def"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:paddingBottom="@dimen/padding_switch"
                    android:paddingLeft="@dimen/padding_switch"
                    android:paddingRight="@dimen/padding_switch"
                    android:paddingTop="@dimen/padding_switch"
                    android:text="@string/Spa"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switch5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:paddingBottom="@dimen/padding_switch"
                    android:paddingLeft="@dimen/padding_switch"
                    android:paddingRight="@dimen/padding_switch"
                    android:paddingTop="@dimen/padding_switch"
                    android:text="@string/Spd"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switch6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:paddingBottom="@dimen/padding_switch"
                    android:paddingLeft="@dimen/padding_switch"
                    android:paddingRight="@dimen/padding_switch"
                    android:paddingTop="@dimen/padding_switch"
                    android:text="@string/Spe"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>